--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     Creación de soluciones de lenguaje natural con Azure OpenAI Service
                 </button>
             </div>
-            <div class="py-5 lg:px-10 lg-my-0 lg:w-[800px]  shadow-xl px-4">
+            <div class="py-5 lg:px-10 lg-my-0 lg:w-[800px]  shadow-xl px-4  border-b-2 border-slate-500 border-r-2">
                 <article id="job6" class="md:px-10 hidden">
                     <h3 class="font-bold block">
                         Certificación Apex Developer Professional 1Z0-770
@@ -186,8 +186,8 @@
 						 @click="currentSkill = skill"></button>
 				   </template>
 				</div>
-				<div class="flex items-center justify-center lg:ml-4 md:mt-4 sm:mt-6 " x-data="{ circumference: 2 * 22 / 7 * 120 }">
-					<svg class="transform -rotate-90 w-72 h-72">
+				<div class="flex items-center justify-center lg:ml-4 md:mt-4  " x-data="{ circumference: 2 * 22 / 7 * 120 }">
+					<svg class="transform -rotate-90 w-72 h-72 mt-4 md:mt-0 lg:mt-0">
 					  <circle cx="145" cy="145" r="120" stroke="currentColor" stroke-width="30" fill="transparent"
 						 class="text-slate-500" />
 					  <circle cx="145" cy="145" r="120" stroke="currentColor" stroke-width="30" fill="transparent"
