--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a href="#">
                     <img src="./img/icono.png" width="80" srcset="">
                 </a>
-              <button @click="open = !open" class="lg:hidden text-black  ">
+              <button @click="open = !open" class="lg:hidden text-black dark:text-sky-500 ">
                 <div class="w-6 h-10 pb-6 relative">
                   <svg
                   x-show="!open"
@@ -65,7 +65,7 @@
                     <li class="md:px-5 transition hover:text-sky-500 font-bold"><a href="#skillSectionTitle">Habilidades</a></li>
                     <li class="md:px-5 transition hover:text-sky-500 font-bold"><a href="#projectSectionTitle">Proyectos</a></li>
                     <li class="md:px-5 transition hover:text-sky-500 font-bold"><div class="">
-                        <button id="darkButton">
+                        <button class="darkButton">
                             <i class="bi bi-moon-stars-fill hover:text-sky-500 dark:hover:text-slate-50 text-slate-900 dark:text-sky-500 text-2xl"></i>
                         </button>
                     </div></li>
@@ -89,8 +89,8 @@
                 <li class="md:px-5 transition mb-2 hover:text-sky-500 font-bold"><a href="#skillSectionTitle">Habilidades</a></li>
                 <li class="md:px-5 transition mb-2 hover:text-sky-500 font-bold"><a href="#projectSectionTitle">Proyectos</a></li>
                 <li class="md:px-5 transition mb-2 hover:text-sky-500 font-bold"><div class="">
-                    <button id="darkButton">
-                        <i class="bi bi-moon-stars-fill text-slate-900 dark:text-sky-500 text-2xl"></i>
+                    <button class="darkButton"  >
+                        <i class="bi bi-moon-stars-fill hover:text-sky-500 dark:hover:text-slate-50 text-slate-900 dark:text-sky-500 text-2xl"></i>
                     </button>
                 </div></li>
             </ul>
@@ -131,30 +131,30 @@
                 </div>
             </div>
         </section>
-        <!-- Certificados y cursos -->
+        <!--Educación, Certificados y cursos -->
         <h2 class="text-3xl text-slate-700 dark:text-white font-bold tracking-widest w-[85%] m-auto text-center pt-8 shadow-xl p-4" id="educationSectionTitle">
             Educación, Certificaciones y Cursos
         </h2>
         <section id="educationSection" class="my-12 flex flex-col w-[80%] lg:flex-row lg:w-[88%] lg:my-28 m-auto justify-center px-10">
             <div class="flex justify-between flex-col lg:w-[30%] shadow-md ">
-                <button type="button" id="link1" data-id="job1" class="border-b-2 font-bold hover:dark:bg-sky-500 w-full px-4 hover:bg-slate-200 lg:border-l-2 lg:border-b-0 lg:text-left transition duration-300 border-sky-500 bg-slate-300 dark:bg-sky-500 py-4 rounded focus:font-bold" onclick="toggleButtonStyle(this)">
+                <button type="button" id="link1" data-id="item1" class="border-b-2 font-bold hover:dark:bg-sky-500 w-full px-4 hover:bg-slate-200 lg:border-l-2 lg:border-b-0 lg:text-left transition duration-300 border-sky-500 bg-slate-300 dark:bg-sky-500 py-4 rounded focus:font-bold" >
                     Ingeniería de Sistemas
                 </button>
-                <button type="button" id="link6" data-id="job6" class="border-b-2 hover:dark:bg-slate-700 w-full px-4 lg:border-l-2 lg:border-b-0 lg:h-full lg:text-left dark:bg-primary transition duration-300 hover:bg-slate-200 rounded py-6 focus:font-bold border-slate-500" onclick="toggleButtonStyle(this)">
+                <button type="button" id="link6" data-id="item6" class="border-b-2 hover:dark:bg-slate-700 w-full px-4 lg:border-l-2 lg:border-b-0 lg:h-full lg:text-left dark:bg-primary transition duration-300 hover:bg-slate-200 rounded py-6 focus:font-bold border-slate-500" >
                     1Z0-770 Oracle Apex Developer Professional Certification
                 </button>
-                <button type="button" id="link2" data-id="job2" class="border-b-2 hover:dark:bg-slate-700 w-full px-4 lg:border-l-2 lg:border-b-0 lg:h-full lg:text-left dark:bg-primary transition duration-300 hover:bg-slate-200 rounded py-6 focus:font-bold border-slate-500" onclick="toggleButtonStyle(this)">
+                <button type="button" id="link2" data-id="item2" class="border-b-2 hover:dark:bg-slate-700 w-full px-4 lg:border-l-2 lg:border-b-0 lg:h-full lg:text-left dark:bg-primary transition duration-300 hover:bg-slate-200 rounded py-6 focus:font-bold border-slate-500" >
                     Ciberseguridad de Google
                 </button>
-                <button type="button" id="link3" data-id="job3" class="border-b-2 border-slate-500 hover:dark:bg-slate-700 w-full px-4 lg:border-l-2 lg:border-b-0 lg:h-full lg:text-left dark:bg-primary transition duration-300 hover:bg-slate-200 rounded py-6 focus:font-bold " onclick="toggleButtonStyle(this)">
+                <button type="button" id="link3" data-id="item3" class="border-b-2 border-slate-500 hover:dark:bg-slate-700 w-full px-4 lg:border-l-2 lg:border-b-0 lg:h-full lg:text-left dark:bg-primary transition duration-300 hover:bg-slate-200 rounded py-6 focus:font-bold " >
                     AI-050 Developing Generative Artificial Intelligence
                 </button>
-                <button type="button" id="link4" data-id="job4" class="border-b-2 hover:dark:bg-slate-700 w-full px-4 lg:border-l-2 lg:border-b-0 lg:h-full lg:text-left dark:bg-primary transition duration-300 hover:bg-slate-200 py-4 rounded focus:font-bold border-slate-500" onclick="toggleButtonStyle(this)">
+                <button type="button" id="link4" data-id="item4" class="border-b-2 hover:dark:bg-slate-700 w-full px-4 lg:border-l-2 lg:border-b-0 lg:h-full lg:text-left dark:bg-primary transition duration-300 hover:bg-slate-200 py-4 rounded focus:font-bold border-slate-500" onclick="toggleButtonStyle(this)">
                     Creación de soluciones de lenguaje natural con Azure OpenAI Service
                 </button>
             </div>
             <div class="py-5 lg:px-10 lg-my-0 lg:w-[800px]  shadow-xl px-4  border-b-2 border-sky-500 border-r-2">
-                <article id="job6" class="md:px-10 hidden">
+                <article id="item6" class="md:px-10 hidden">
                     <h3 class="font-bold block">
                         Certificación Apex Developer Professional 1Z0-770
                         <span class="text-slate-500 font-bold text-lg block">Oracle</span>
@@ -168,7 +168,7 @@
                         </li>
                     </ul>
                 </article>
-                <article id="job2" class="hidden md:px-10">
+                <article id="item2" class="hidden md:px-10">
                     <h3 class="font-bold">
                         Certificación Ciberseguridad de Google
                         <span class="text-slate-500 font-bold text-lg block">Coursera - Colnodo - Google</span>
@@ -182,7 +182,7 @@
                         </li>
                     </ul>
                 </article>
-                <article id="job3" class = "hidden md:px-10">
+                <article id="item3" class = "hidden md:px-10">
                     <h3 class="font-bold">
                         AI-050 Developing Generative Artificial Intelligence
                         <span class="text-slate-500 font-bold text-lg block">Microsoft Learn</span>
@@ -196,7 +196,7 @@
                         </li>
                     </ul>
                 </article>
-                <article id="job4" class="hidden md:px-10">
+                <article id="item4" class="hidden md:px-10">
                     <h3 class="font-bold">
                         Creación de soluciones de lenguaje natural con Azure OpenAI Service
                         <span class="text-slate-500 font-bold text-lg block">Microsoft Learn</span>
@@ -210,7 +210,7 @@
                         </li>
                     </ul>
                 </article>
-                <article id="job1" class="md:px-10">
+                <article id="item1" class="md:px-10">
                     <h3 class="font-bold block">
                         Ingeniería de Sistemas
                         <span class="text-slate-500 font-bold text-lg block">Universidad de Caldas - Colombia</span>
@@ -258,7 +258,7 @@
 			 Ultimos Proyectos
 		  </h2>
 	
-			<section id="projectSection" class="my-12 flex flex-col w-[80%] lg:flex-row lg:w-[88%] lg:my-28 m-auto justify-center px-10">
+			<section id="projectSection" class="my-12 flex flex-col w-[80%] lg:flex-row lg:w-[88%] lg:my-28 m-auto justify-center md:px-10 lg:px-10 px-2">
 	
 				<div class="grid gap-6 lg:grid-cols-3 xl:gap-x-12 justify-center">
 	
