Fix Education Section

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <h2 class="text-3xl text-slate-700 dark:text-white font-bold tracking-widest w-[85%] m-auto text-center pt-8 shadow-xl p-4" id="educationSectionTitle">
             Educación, Certificaciones y Cursos
         </h2>
-        <section id="educationSection" class="my-12 flex flex-col w-[90%] lg:flex-row lg:w-[88%] lg:my-28 m-auto justify-center px-10">
+        <section id="educationSection" class="my-12 flex flex-col w-[88%] md:w-[80%] lg:flex-row lg:w-[85%] lg:my-28 m-auto justify-center px-10">
             <div class="flex justify-between flex-col lg:w-[30%] shadow-md ">
                 <button type="button" id="link1" data-id="item1" class="border-b-2 font-bold hover:dark:bg-sky-500 w-full px-4 hover:bg-slate-200 lg:border-l-2 lg:border-b-0 lg:text-left transition duration-300 border-sky-500 bg-slate-300 dark:bg-sky-500 py-4 rounded focus:font-bold" >
                     Ingeniería de Sistemas
