--- a/index.html
+++ b/index.html
@@ -140,16 +140,16 @@
                 <button type="button" id="link1" data-id="item1" class="border-b-2 font-bold hover:dark:bg-sky-500 w-full px-4 hover:bg-slate-200 lg:border-l-2 lg:border-b-0 lg:text-left transition duration-300 border-sky-500 bg-slate-300 dark:bg-sky-500 py-4 rounded focus:font-bold" >
                     Ingeniería de Sistemas
                 </button>
-                <button type="button" id="link6" data-id="item6" class="border-b-2 hover:dark:bg-slate-700 w-full px-4 lg:border-l-2 lg:border-b-0 lg:h-full lg:text-left dark:bg-primary transition duration-300 hover:bg-slate-200 rounded py-6 focus:font-bold border-slate-500" >
+                <button type="button" id="link6" data-id="item6" class="border-b-2 hover:dark:bg-sky-500 w-full px-4 lg:border-l-2 lg:border-b-0 lg:h-full lg:text-left dark:bg-primary transition duration-300 hover:bg-slate-200 rounded py-6 focus:font-bold border-slate-500" >
                     1Z0-770 Oracle Apex Developer Professional Certification
                 </button>
-                <button type="button" id="link2" data-id="item2" class="border-b-2 hover:dark:bg-slate-700 w-full px-4 lg:border-l-2 lg:border-b-0 lg:h-full lg:text-left dark:bg-primary transition duration-300 hover:bg-slate-200 rounded py-6 focus:font-bold border-slate-500" >
+                <button type="button" id="link2" data-id="item2" class="border-b-2 hover:dark:bg-sky-500 w-full px-4 lg:border-l-2 lg:border-b-0 lg:h-full lg:text-left dark:bg-primary transition duration-300 hover:bg-slate-200 rounded py-6 focus:font-bold border-slate-500" >
                     Ciberseguridad de Google
                 </button>
-                <button type="button" id="link3" data-id="item3" class="border-b-2 border-slate-500 hover:dark:bg-slate-700 w-full px-4 lg:border-l-2 lg:border-b-0 lg:h-full lg:text-left dark:bg-primary transition duration-300 hover:bg-slate-200 rounded py-6 focus:font-bold " >
+                <button type="button" id="link3" data-id="item3" class="border-b-2 border-slate-500 hover:dark:bg-sky-500 w-full px-4 lg:border-l-2 lg:border-b-0 lg:h-full lg:text-left dark:bg-primary transition duration-300 hover:bg-slate-200 rounded py-6 focus:font-bold " >
                     AI-050 Developing Generative Artificial Intelligence
                 </button>
-                <button type="button" id="link4" data-id="item4" class="border-b-2 hover:dark:bg-slate-700 w-full px-4 lg:border-l-2 lg:border-b-0 lg:h-full lg:text-left dark:bg-primary transition duration-300 hover:bg-slate-200 py-4 rounded focus:font-bold border-slate-500" onclick="toggleButtonStyle(this)">
+                <button type="button" id="link4" data-id="item4" class="border-b-2 hover:dark:bg-sky-500 w-full px-4 lg:border-l-2 lg:border-b-0 lg:h-full lg:text-left dark:bg-primary transition duration-300 hover:bg-slate-200 py-4 rounded focus:font-bold border-slate-500" onclick="toggleButtonStyle(this)">
                     Creación de soluciones de lenguaje natural con Azure OpenAI Service
                 </button>
             </div>
